--- a/studycafe/src/main/resources/application.properties
+++ b/studycafe/src/main/resources/application.properties
@@ -5,12 +5,14 @@ spring.datasource.password=tmzktmzosjsjem
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # hibernate logging
 logging.level.org.hibernate=debug
