--- a/studycafe/src/main/resources/application.properties
+++ b/studycafe/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.sql.init.mode=always
 
 # hibernate logging
 logging.level.org.hibernate=debug
+
+# Session
+server.servlet.session.tracking-modes=cookie
+server.servlet.session.timeout=1800
