chore: gson, swagger 의존성 추가

--- a/studycafe/build.gradle
+++ b/studycafe/build.gradle
@@ -25,6 +25,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	implementation 'com.google.code.gson:gson:2.8.9'
+	implementation group: 'org.json', name: 'json', version: '20220320'
+
     testImplementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
